--- a/src/app/admin/features/special_role/specialoperator/specialoperator.component.html
+++ b/src/app/admin/features/special_role/specialoperator/specialoperator.component.html
@@ -27,7 +27,7 @@
 
         <div class="d-flex justify-content-center mb-2" style="align-items: baseline;">
             <button class="btn btn-outline-info mx-1" mat-raised-button color="custom-select"
-                style="background-color: #0c5e85;color: white;" type="button" (click)="New_lco()"> <i
+                style="background-color: #0c5e85;color: white;" type="button" (click)="New_lco('sub_lco')"> <i
                     class="fa fa-plus mx-2" style="padding-right: 1px;font-size: 14px"></i>
                 NEW LCO
             </button>
