--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -172,10 +172,17 @@
                             <h6 style="margin: auto;color: black;font-weight: 600;"> SMARTCARD LIST</h6>
                         </div>
                         <div class="d-flex  icon-container" style="padding: 10px;">
-                            <div *ngIf="role != 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'"
+                            <div *ngIf="role != 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER' && role != 'ROLE_OPERATOR'"
                                 class="icon-item d-flex align-item-center tooltip-container  bttn"
                                 style="background-color:var(--sub-dashboard-icon);"
                                 (click)="openLoginPage('change_lco')">
+                                <i class="fa fa-refresh	" style="font-size:15px;color: white;"></i>
+                                <div class="tooltip-content">Change LCO</div>
+                            </div>
+                            <div *ngIf="role == 'ROLE_OPERATOR'"
+                                class="icon-item d-flex align-item-center tooltip-container  bttn"
+                                style="background-color:var(--sub-dashboard-icon);"
+                                (click)="openLoginPage1('change_lco')">
                                 <i class="fa fa-refresh	" style="font-size:15px;color: white;"></i>
                                 <div class="tooltip-content">Change LCO</div>
                             </div>
@@ -458,10 +465,17 @@
                                         <i class="fas fa-trash"></i><span>Delete Message</span></button>
 
                                 </div>
-                                <div *ngIf="role != 'ROLE_SUBSCRIBER'"
+                                <div *ngIf="role !== 'ROLE_SUBSCRIBER' && role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO'"
                                     class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <button class="btn d-flex justify-content-between" [disabled]="smartcardchange"
                                         (click)="openLoginPage('smartcardchange')">
+                                        <i class="fa-solid fa-share"></i><span>Smartcard Transfer</span>
+                                    </button>
+                                </div>
+                                <div *ngIf="role === 'ROLE_OPERATOR' || role === 'ROLE_SUBLCO'"
+                                    class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
+                                    <button class="btn d-flex justify-content-between" [disabled]="smartcardchange"
+                                        (click)="openLoginPage1('smartcardchange')">
                                         <i class="fa-solid fa-share"></i><span>Smartcard Transfer</span>
                                     </button>
                                 </div>
@@ -483,10 +497,16 @@
 
                             </div>
                             <div class="col-12 col-md-12 display_btn1">
-                                <div *ngIf="role != 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'"
+                                <div *ngIf="role != 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'  && role != 'ROLE_OPERATOR'"
                                     class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <button class="btn  d-flex justify-content-between" [disabled]="boxchange"
                                         (click)="openLoginPage('boxchange')"><i class="fa-solid fa-share"></i><span>Box
+                                            Transfer</span></button>
+                                </div>
+                                <div *ngIf="role == 'ROLE_OPERATOR'"
+                                    class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
+                                    <button class="btn  d-flex justify-content-between" [disabled]="boxchange"
+                                        (click)="openLoginPage1('boxchange')"><i class="fa-solid fa-share"></i><span>Box
                                             Transfer</span></button>
                                 </div>
                                 <div *ngIf="(role === 'ROLE_SUBLCO' && Sublcopermissionlist.suspend == true) || role != 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'"
