--- a/src/app/_core/charts/package-chart/package-chart.component.html
+++ b/src/app/_core/charts/package-chart/package-chart.component.html
@@ -1,5 +1,11 @@
-<div>
+<!-- <div>
     <div id="packagechartContainer" style="height: 350px; width: 100%;"></div>
+</div> -->
+
+
+<div>
+    <div >
+        <h6 style="color:rgb(83, 81, 81);font-size: 20px;font-weight: 600;text-align: start;font-family:sans-serif;">PACKAGE DETAILS</h6>
+    </div>
+    <div id="packagechartContainer" style="height: 300px; width: 100%;"></div>
 </div>
-
-
