--- a/src/app/admin/features/Bulk_operation/bulkoperatorcreation/bulkoperatorcreation.component.html
+++ b/src/app/admin/features/Bulk_operation/bulkoperatorcreation/bulkoperatorcreation.component.html
@@ -51,7 +51,7 @@
 
             <div class="d-flex justify-content-end align-items-center mt-3">
                 <button type="submit" class="btn btn-success" [disabled]="!isCheckboxChecked || !isFileSelected"
-                    (click)="submit()">
+                    (click)="submit1()">
                     Submit 
                 </button>
             </div>
